build-log.txt
[0;36m=== Hartonomous Build Script ===[0m

[0;36mChecking dependencies...[0m
[0;32m✓ CMake found: 3.22.1[0m
[0;32m✓ GCC found: 11.4.0[0m
[0;32m✓ Intel OneAPI already initialized[0m

[0;36mChecking submodules...[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/blake3[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/eigen[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/hilbert[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/hnswlib[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/json[0m
[0;32m✓ /home/ahart/Projects/Hartonomous/Engine/external/spectra[0m

[0;36mCleaning build directory...[0m
[0;32m✓ Cleaned /home/ahart/Projects/Hartonomous/build/linux-release-max-perf[0m
[0;36mCleaning .NET artifacts...[0m
[0;32m✓ Cleaned .NET artifacts[0m

[0;36mConfiguring build (preset: linux-release-max-perf)...[0m
Preset CMake variables:

  CMAKE_BUILD_TYPE="Release"
  CMAKE_EXPORT_COMPILE_COMMANDS="ON"
  HARTONOMOUS_ENABLE_FAST_MATH="ON"
  HARTONOMOUS_ENABLE_NATIVE_ARCH="ON"
  HARTONOMOUS_HNSW_SIMD="AUTO"
  HARTONOMOUS_MKL_INTERFACE="LP64"
  HARTONOMOUS_MKL_THREADING="SEQUENTIAL"

-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- 
-- ========== Hartonomous Build Configuration ==========
--   C++ Standard:        C++20
--   Build Type:          Release
--   Native Arch:         ON
--   Fast Math:           ON
--   MKL Threading:       SEQUENTIAL
--   MKL Interface:       LP64
--   HNSW SIMD:           AUTO
--   IPO/LTO:             ON
-- ======================================================
-- 
-- MKL: Using LP64 interface (32-bit integers)
-- MKL: Using sequential (single-threaded) mode
-- MKL: Configuration complete (LP64, SEQUENTIAL)
-- Eigen: MKL-accelerated with BLAS/LAPACK/VML backend + SIMD vectorization
-- HNSWLib: AUTO SIMD → -march=native
-- HNSWLib: Header-only ANN library configured
-- BLAKE3: Runtime SIMD dispatch enabled (SSE2/SSE4.1/AVX2/AVX512)
-- nlohmann/json: Header-only JSON library configured
-- Found PkgConfig: /usr/bin/pkg-config (found version "0.29.2") 
-- Checking for module 'geos'
--   Found geos, version 3.10.2
-- Checking for module 'proj'
--   Found proj, version 8.2.1
-- PostGIS: Found at /home/ahart/Projects/Hartonomous/Engine/external/postgis
--   GEOS: geos_c
--   proj: proj
-- PostgreSQL Configured: Client & Server targets ready.
-- Tree-sitter: Found at /home/ahart/Projects/Hartonomous/Engine/external/tree-sitter
-- Found PostgreSQL: /usr/lib/x86_64-linux-gnu/libpq.so (found version "18.1")  
-- Found PostgreSQL: /usr/lib/x86_64-linux-gnu/libpq.so
-- Found OpenMP_C: -fopenmp (found version "4.5") 
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Google Test found, using for unit tests
-- Engine: IPO/LTO enabled
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ahart/Projects/Hartonomous/build/linux-release-max-perf
[0;32m✓ Configuration complete[0m

[0;36mBuilding all C++ targets...[0m
[1/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_portable.c.o
[2/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3.c.o
[3/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_dispatch.c.o
[4/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_avx2.c.o
[5/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_sse41.c.o
[6/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_sse2.c.o
[7/72] Building C object CMakeFiles/blake3_impl.dir/Engine/external/blake3/c/blake3_avx512.c.o
[8/72] Linking C static library libblake3_impl.a
[9/72] Building CXX object Engine/CMakeFiles/engine.dir/src/cognitive/godel_engine.cpp.o
[10/72] Building CXX object Engine/CMakeFiles/engine.dir/src/geometry/s3_bbox.cpp.o
[11/72] Building CXX object Engine/CMakeFiles/engine.dir/src/cognitive/ooda_loop.cpp.o
[12/72] Building CXX object Engine/CMakeFiles/engine.dir/src/database/postgres_connection.cpp.o
[13/72] Building CXX object Engine/CMakeFiles/engine.dir/src/database/bulk_copy.cpp.o
[14/72] Building CXX object Engine/CMakeFiles/engine.dir/src/geometry/s3_distance.cpp.o
[15/72] Building CXX object Engine/CMakeFiles/engine.dir/src/hashing/blake3_pipeline.cpp.o
[16/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/ngram_extractor.cpp.o
[17/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/model_package_loader.cpp.o
[18/72] Building CXX object Engine/CMakeFiles/engine.dir/src/geometry/super_fibonacci.cpp.o
[19/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/safetensor_ingester.cpp.o
[20/72] Building CXX object Engine/CMakeFiles/engine.dir/src/main.cpp.o
[21/72] Building CXX object Engine/CMakeFiles/engine.dir/src/cognitive/walk_engine.cpp.o
[22/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ml/s3_hnsw.cpp.o
[23/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ml/model_extraction.cpp.o
[24/72] Building CXX object Engine/CMakeFiles/engine.dir/src/query/ai_ops.cpp.o
[25/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/text_ingester.cpp.o
[26/72] Building CXX object Engine/CMakeFiles/engine.dir/src/query/semantic_query.cpp.o
[27/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/atom_store.cpp.o
[28/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/composition_store.cpp.o
[29/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/content_store.cpp.o
[30/72] Building CXX object Engine/CMakeFiles/engine.dir/src/interop_api.cpp.o
[31/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/relation_evidence_store.cpp.o
[32/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/model_ingester.cpp.o
FAILED: Engine/CMakeFiles/engine.dir/src/ingestion/model_ingester.cpp.o 
/usr/bin/c++ -DEIGEN_NO_DEBUG -DEIGEN_NO_STATIC_ASSERT -DEIGEN_USE_BLAS -DEIGEN_USE_LAPACKE -DEIGEN_USE_MKL_ALL -DEIGEN_USE_THREADS -DEIGEN_VECTORIZE -DEIGEN_VECTORIZE_AVX2 -DEIGEN_VECTORIZE_FMA -DHARTONOMOUS_EXPORT -DHAVE_CBLAS=1 -DHAVE_LAPACK=1 -DMKL_LP64 -Dengine_EXPORTS -I/home/ahart/Projects/Hartonomous/Engine/include -I/home/ahart/Projects/Hartonomous/Engine/external/hilbert -I/home/ahart/Projects/Hartonomous/Engine/src -I/home/ahart/Projects/Hartonomous/Engine/external/blake3/c -isystem /home/ahart/Projects/Hartonomous/Engine/external/eigen -isystem /opt/intel/oneapi/mkl/2025.3/include -isystem /home/ahart/Projects/Hartonomous/Engine/external/hnswlib -isystem /home/ahart/Projects/Hartonomous/Engine/external/tree-sitter/lib/include -isystem /home/ahart/Projects/Hartonomous/Engine/external/postgis/liblwgeom -isystem /usr/include/postgresql -isystem /home/ahart/Projects/Hartonomous/Engine/external/spectra/include -isystem /home/ahart/Projects/Hartonomous/Engine/external/json/include -O3 -DNDEBUG -flto -fno-fat-lto-objects -fPIC -Wall -Wextra -Wpedantic -O3 -march=native -mtune=native -ffast-math -funroll-loops -fomit-frame-pointer -fopenmp -std=c++20 -MD -MT Engine/CMakeFiles/engine.dir/src/ingestion/model_ingester.cpp.o -MF Engine/CMakeFiles/engine.dir/src/ingestion/model_ingester.cpp.o.d -o Engine/CMakeFiles/engine.dir/src/ingestion/model_ingester.cpp.o -c /home/ahart/Projects/Hartonomous/Engine/src/ingestion/model_ingester.cpp
/home/ahart/Projects/Hartonomous/Engine/src/ingestion/model_ingester.cpp: In member function ‘void Hartonomous::ModelIngester::extract_attention_layer_edges(const std::vector<Hartonomous::AttentionLayer>&, const std::vector<std::__cxx11::basic_string<char> >&, const MatrixXf&, const std::unordered_map<std::__cxx11::basic_string<char>, std::array<unsigned char, 16> >&, std::unordered_set<std::array<unsigned char, 16>, Hartonomous::HashHasher>&, Hartonomous::ModelIngestionStats&)’:
/home/ahart/Projects/Hartonomous/Engine/src/ingestion/model_ingester.cpp:806:9: error: ‘layer_count’ was not declared in this scope
  806 |         layer_count++;
      |         ^~~~~~~~~~~
/home/ahart/Projects/Hartonomous/Engine/src/ingestion/model_ingester.cpp:810:63: error: ‘start_relations’ was not declared in this scope
  810 |     std::cout << "    Created " << (stats.relations_created - start_relations) << " attention layer relations from "
      |                                                               ^~~~~~~~~~~~~~~
/home/ahart/Projects/Hartonomous/Engine/src/ingestion/model_ingester.cpp:811:18: error: ‘layer_count’ was not declared in this scope
  811 |               << layer_count << " layers." << std::endl;
      |                  ^~~~~~~~~~~
[33/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/relation_store.cpp.o
[34/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/atom_lookup.cpp.o
[35/72] Building CXX object Engine/CMakeFiles/engine.dir/src/storage/physicality_store.cpp.o
[36/72] Building CXX object Engine/CMakeFiles/engine.dir/src/ingestion/safetensor_loader.cpp.o
[37/72] Building CXX object Engine/CMakeFiles/engine.dir/src/unicode/ingestor/node_generator.cpp.o
ninja: build stopped: subcommand failed.
[0;31m✗ C++ Build failed[0m
